kubernetes/platform/messaging/druid/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: druid
  namespace: druid
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "druid.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: druid-router
          port: 8888
